# brbd-sync

./: .gitignore  README.md  flake.nix  pyproject.toml
nix/: uv-workspace.nix  uv2nix.nix
src/brbd_sync/: baserow.py  buttondown.py  buttondown_api.py  cli.py  cli_test.py  datasource.py  sync.py  sync_test.py  util.py
